<resources>
    <string name="app_name">CarStore</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="hey_buddy_welcome_login_now">Hey Buddy Welcome login Now</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Hey_Buddy_Welcome_Login_Now">Hey Buddy Welcome Login Now</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Hey_Buddy_Click_Here_To_Register">Hey Buddy Click here To Register</string>
    <string name="Logout">logout</string>
    <string name="Lets_Get_Started">Get Started</string>
    <string name="BUY_AND_CUSTOMS">BUY AND CUSTOMS</string>
    <string name="BC">B&amp;C</string>
    <string name="Buy_Premium_Luxury_Cars">Luxury cars. Find the best car and rent with a good price</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="bell_button_description">Bell Button - Notify me of updates</string>
    <string name="search_handel">Search For Cars</string>
    <string name="popular_car">Popular</string>
    <string name="Top_cars">Top Car In India</string>
    <string name="popular_car_name">Hyundai Creta</string>
    <string name="popular_car_price">Rs.13.10 Lakh</string>
    <string name="popular_car_location">On-Road Price, Mumbai</string>
    <string name="profile_pic">profile_image</string>
    <string name="home">Home</string>
    <string name="loan">Loan</string>
    <string name="compare">Compare</string>
    <string name="menu">Menu</string>
</resources>