<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#201414"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/carimage"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:scaleType="centerCrop"

        app:srcCompat="@drawable/car"
        tools:srcCompat="@drawable/car" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/cyber"
            android:text="@string/BC"
            android:textColor="@color/white"
            android:textSize="90sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/alf"
            android:gravity="center"
            android:text="@string/BUY_AND_CUSTOMS"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jostlight"
            android:gravity="center"
            android:padding="20dp"
            android:text="Luxury cars. Find the best car and rent with a good price"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnContinueTologin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/buttom"
            android:text="@string/Lets_Get_Started"
            android:textColor="@color/black" />
    </LinearLayout>


</RelativeLayout>